[gd_scene load_steps=9 format=3 uid="uid://bex2oy2b8cuwy"]

[ext_resource type="Script" uid="uid://mhni883y5mcx" path="res://scripts/Menus/player_pillar.gd" id="1_caq3i"]
[ext_resource type="PackedScene" uid="uid://biq8ajxoie2ij" path="res://scenes/Menus/winner_medal.tscn" id="2_8lusk"]
[ext_resource type="FontFile" uid="uid://v66tkdbnak7b" path="res://assets/fonts/friendlyscribbles.ttf" id="3_gthei"]
[ext_resource type="Texture2D" uid="uid://4ga7mu8uoap5" path="res://assets/misc_sprites/rays_overlay.png" id="4_8lusk"]
[ext_resource type="Texture2D" uid="uid://dwwjherjsfetp" path="res://assets/misc_sprites/podium_pillar.png" id="4_x13c3"]

[sub_resource type="Animation" id="Animation_gthei"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Center/VBoxContainer/Name/win_rays:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Center/VBoxContainer/Name/win_rays:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8lusk"]
resource_name = "win"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Center/VBoxContainer/Name/win_rays:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.59702),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Center/VBoxContainer/Name/win_rays:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.59702),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x13c3"]
_data = {
&"RESET": SubResource("Animation_gthei"),
&"win": SubResource("Animation_8lusk")
}

[node name="Pillar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2
script = ExtResource("1_caq3i")
medal_scene = ExtResource("2_8lusk")

[node name="Center" type="Control" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Center"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -164.5
offset_top = -21.5
offset_right = 124.5
offset_bottom = 881.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Name" type="Label" parent="Center/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("3_gthei")
theme_override_font_sizes/font_size = 50
text = "Player_Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="win_rays" type="TextureRect" parent="Center/VBoxContainer/Name"]
self_modulate = Color(1, 1, 1, 0)
z_index = -1
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -203.5
offset_top = -343.0
offset_right = 203.5
offset_bottom = 343.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(368, 368)
texture = ExtResource("4_8lusk")
stretch_mode = 5

[node name="Control" type="Control" parent="Center/VBoxContainer"]
layout_mode = 2

[node name="Score" type="Label" parent="Center/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("3_gthei")
theme_override_font_sizes/font_size = 50
text = "1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PillarText" type="TextureRect" parent="Center/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_x13c3")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="Center/VBoxContainer/PillarText"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 40

[node name="MedalContainer" type="HBoxContainer" parent="Center/VBoxContainer/PillarText/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -80

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_x13c3")
}
